--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
         <label for="inputText">変換したいテキスト:</label>
         <textarea id="inputText" rows="10" placeholder="ここにテキストを入力してください"></textarea>
-        <button id="pasteButton">クリップボードから貼り付け</button> 
+        <div class="button-group">
+            <button id="pasteButton">クリップボードから貼り付け</button>
+            <button id="pasteAndConvertButton">貼り付けて変換</button>
+        </div>
 
         <label for="conversionType">変換の種類を選択:</label>
         <select id="conversionType">
