feat: "半角スペースに統一して引用（> ）をつける"機能の追加 / Gemini改行修正の調整

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <option value="stripTrailingWhitespace">行末の空白を削除</option>
             <option value="trimWhitespace">行頭の空白を削除</option>
             <option value="geminiNewlineFix">Gemini改行修正</option>
+            <option value="quoteAndHalfwidthSpace">半角スペースに統一して引用（> ）をつける</option>
             <option value="adjustKagikakko">括弧のネストを自動調整（「」と『』）</option>
             <option value="spaceToFullwidth">半角スペースを全角に統一</option>
             <option value="spaceToHalfwidth">全角スペースを半角に統一</option>
