refactor: 言語指定をより一般的な小文字に変更

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <option value="markdownQuote">Markdown引用（> ）</option>
             <option value="markdownBulletList">Markdown箇条書き（* ）</option>
             <option value="markdownNumberedList">Markdown番号付きリスト</option>
-            <option value="codeBlockMarkdown">コードブロック (Markdown)</option>
-            <option value="codeBlockAhk">コードブロック (AutoHotkey)</option>
-            <option value="codeBlockPython">コードブロック (Python)</option>
-            <option value="codeBlockJs">コードブロック (JavaScript)</option>
+            <option value="codeBlockMarkdown">コードブロック (markdown)</option>
+            <option value="codeBlockAhk">コードブロック (autohotkey)</option>
+            <option value="codeBlockPython">コードブロック (python)</option>
+            <option value="codeBlockJs">コードブロック (javascript)</option>
             <option value="codeBlockGeneric">コードブロック (汎用)</option>
             <option value="newlinesToSlash">改行を " / " に変換</option>
             <option value="newlinesToSpace">改行をスペースに変換</option>
